--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>AutoPortal</title>
+<title>AutoMartNik</title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 <!--[if IE]>
@@ -21,7 +21,7 @@
   <!-- Header -->
   <div id="header">
     <!-- Logo -->
-    <h1 id="logo"><a href="#">autoportal your friend on the road</a></h1>
+    <h1 id="logo"><a href="#">your friend on the road</a></h1>
     <!-- End Logo -->
     <!-- Navigation -->
     <div id="nav">
@@ -234,7 +234,7 @@
   <!-- End Content -->
   <!-- Footer -->
   <div id="footer">
-    <p>&copy; Sitename.com. Design by <a href="http://chocotemplates.com">ChocoTemplates.com</a></p>
+    <p>&copy; Automartnik.com. Design by <a href="http://MartNik.com">Martnik.com</a></p>
   </div>
   <!-- End Footer -->
 </div>
